--- a/pom.xml
+++ b/pom.xml
@@ -21,50 +21,62 @@
         </plugins>
     </build>
 
-        <repositories>
-            <repository>
-                <id>jcenter</id>
-                <name>jcenter-bintray</name>
-                <url>https://jcenter.bintray.com</url>
-            </repository>
-        </repositories>
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <name>jcenter-bintray</name>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
-        <dependencies>
-            <dependency>
-                <groupId>net.dv8tion</groupId>
-                <artifactId>JDA</artifactId>
-                <version>4.0.0_62 </version>
-            </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>4.0.0_73</version>
+        </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
-            <dependency>
-                <groupId>org.xerial</groupId>
-                <artifactId>sqlite-jdbc</artifactId>
-                <version>3.28.0</version>
-            </dependency>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.28.0</version>
+        </dependency>
 
-            <dependency>
-                <groupId>com.sedmelluq</groupId>
-                <artifactId>lavaplayer</artifactId>
-                <version>1.3.25 </version>
-            </dependency>
+        <!--   https://bintray.com/sedmelluq/com.sedmelluq/lavaplayer -->
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.32</version>
+        </dependency>
 
-            <!-- Fixe "Simbol not resolved" Error-->
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>2.3</version>
-                <scope>provided</scope>
-            </dependency>
+        <!-- Fixe "Simbol not resolved" Error-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
 
-            <!-- Will fix the LavaPlay on Raspbarry Error! -->
-            <!-- https://mvnrepository.com/artifact/com.github.natanbc/lavaplayer-arm-natives -->
-            <dependency>
-                <groupId>com.github.natanbc</groupId>
-                <artifactId>lavaplayer-arm-natives</artifactId>
-                <version>1.3.10</version>
-            </dependency>
+        <!-- Fix the LavaPlay on Raspbarry Error! -->
+        <!-- https://mvnrepository.com/artifact/com.github.natanbc/lavaplayer-arm-natives -->
+        <dependency>
+            <groupId>com.github.natanbc</groupId>
+            <artifactId>lavaplayer-arm-natives</artifactId>
+            <version>1.3.10</version>
+        </dependency>
 
-        </dependencies>
+        <!-- Test -->
+        <!--
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.28</version>
+        </dependency>
+
+        -->
+
+    </dependencies>
 
 </project>
