Fixed a few bugs

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 
         -->
 
+        <!-- For Emotes -->
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
