--- a/pom.xml
+++ b/pom.xml
@@ -47,15 +47,7 @@
         <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.3.32</version>
-        </dependency>
-
-        <!-- Fixe "Simbol not resolved" Error-->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.3</version>
-            <scope>provided</scope>
+            <version>1.3.33</version>
         </dependency>
 
         <!-- Fix the LavaPlay on Raspbarry Error! -->
@@ -66,16 +58,13 @@
             <version>1.3.10</version>
         </dependency>
 
-        <!-- Test -->
-        <!--
-
+        <!-- Fixed "Simbol not resolved" Error-->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.28</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
         </dependency>
-
-        -->
 
         <!-- For Emotes -->
         <dependency>
