--- a/pom.xml
+++ b/pom.xml
@@ -20,22 +20,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Build an executable JAR with no dependencies -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>de.confusingbot.Main</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-
-            <!-- Build an executable JAR with dependencies -->
+            <!-- Build an executable JAR -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
