--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
+
+            <!-- Deploy to Heroku -->
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+                <configuration>
+                    <appName>confusing-bot</appName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
