--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Build an executable JAR -->
+            <!-- Build an executable JAR, otherwise https://www.java-forum.org/thema/fehler-beim-oeffnen-von-jar-datei-kein-hauptmanifestattribut.142221/ -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
