added some plugin

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,20 @@
                     <appName>confusing-bot</appName>
                 </configuration>
             </plugin>
+
+            <!-- https://stackoverflow.com/questions/40822839/heroku-and-java-no-suitable-driver -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -79,7 +93,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4-1206-jdbc42</version>
+            <version>42.2.19</version>
         </dependency>
 
         <!--   https://bintray.com/sedmelluq/com.sedmelluq/lavaplayer -->
