--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Build an executable JAR, otherwise https://www.java-forum.org/thema/fehler-beim-oeffnen-von-jar-datei-kein-hauptmanifestattribut.142221/ -->
+            <!-- Build an executable JAR, otherwise https://www.java-forum.org/thema/fehler-beim-oeffnen-von-jar-datei-kein-hauptmanifestattribut.142221/ ( Not needed anymore because of 'maven-assembly-plugin')
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -32,6 +32,32 @@
                     </archive>
                 </configuration>
             </plugin>
+            -->
+
+            <!-- Build JAR, which includes all dependencies https://blog.frankel.ch/creating-self-contained-executable-jars/ -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>de.confusingbot.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+
 
             <!-- Deploy to Heroku -->
             <plugin>
@@ -82,11 +108,11 @@
             <version>42.2.19</version>
         </dependency>
 
-        <!--   https://bintray.com/sedmelluq/com.sedmelluq/lavaplayer -->
+        <!-- https://bintray.com/sedmelluq/com.sedmelluq/lavaplayer -->
         <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.3.48</version>
+            <version>1.3.73 </version>
         </dependency>
 
         <!-- Fix the LavaPlay on Raspbarry Error! -->
@@ -97,7 +123,7 @@
             <version>1.3.10</version>
         </dependency>
 
-        <!-- Fixed "Simbol not resolved" Error-->
+        <!-- Fixed "Symbol not resolved" Error-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
